# 3D_engineering

./: .gitignore  README.md
3d-alpha-shapes/: .~lock.fonctions.docx#  fonctions.docx  fonctions.txt
3d-alpha-shapes/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/: CMakeCache.txt  Makefile  alpha.cbp  cmake_install.cmake  moc_options.cxx_parameters  moc_viewer.cxx_parameters  moc_window.cxx_parameters
3d-alpha-shapes/data/: frog.xyz  half-sphere-uniform-1k.xyz  kitten-5k.xyz  stairs.xyz
3d-alpha-shapes/src/: CMakeLists.txt  alpha.ui  dt3.h  main.cpp  options.h  options.ui  scene.cpp  scene.h  types.h  viewer.cpp  window.cpp  window.h
TP_mesh_segmentation/build-linux-Desktop_Qt_5_7_0_GCC_64bit-Default/: CMakeCache.txt  Makefile  alpha.cbp  alpha.qrc.depends  cmake_install.cmake  moc_options.cxx  moc_options.cxx_parameters  moc_viewer.cxx  moc_viewer.cxx_parameters  moc_window.cxx  moc_window.cxx_parameters  qrc_alpha.cxx  ui_alpha.h  ui_options.h
TP_mesh_segmentation/data/: p2.off  p3.off
TP_mesh_segmentation/enonce/: TP_mesh_segmentation.docx
TP_mesh_segmentation/linux/: Polyhedron_Flo.h  alpha.ui  cloud_segmentation.h  dt3.h  mesh.h  options.ui  primitives.h  scene.cpp  scene.h  viewer.cpp  viewer.h  window.h
TP_mesh_segmentation/linux/gco/: GCoptimization.cpp  GCoptimization.h  energy.h
TP_mesh_segmentation/windows_with_qt4/: CMakeLists.txt  Visualization_Tools.h  cloud_segmentation.h  console_color.h  main.cpp  mesh.h  mesh_builder.h  options.h  scene.h  types.h  window.cpp
TP_mesh_segmentation/windows_with_qt4/gco/: GCoptimization.cpp
TP_mesh_segmentation/windows_without_qt4/: CMakeLists.txt  Polyhedron_Flo.h  cloud_segmentation.h  main.cpp  types.h
TP_mesh_segmentation/windows_without_qt4/gco/: GCoptimization.h
